--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.epam</groupId>
-  <artifactId>login</artifactId>
+  <artifactId>webapp</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>login Maven Webapp</name>
+  <name>webapp Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.epam.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,23 +32,30 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.9</version>
+    </dependency>
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.38</version>
+      </dependency>
   </dependencies>
 
   <build>
-    <finalName>login</finalName>
+    <finalName>webapp</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
           <groupId>org.apache.tomcat.maven</groupId>
           <artifactId>tomcat7-maven-plugin</artifactId>
           <version>2.2</version>
-          <!-- Config: contextPath and Port (Default - /SimpleMavenWebApp : 8080) -->
-          <!--
           <configuration>
               <path>/</path>
-              <port>8899</port>
+              <port>8181</port>
           </configuration>
-          -->
         </plugin>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
