--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,11 +4,21 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
                        http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="WebApp_ID" version="3.0">
+
+
+
   <display-name>Fitness</display-name>
   <filter-mapping>
     <filter-name>jdbcFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <description>MySQL</description>
+  <resource-ref>
+    <description>DB Connection</description>
+    <res-ref-name>jdbc/fitness</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 
   <filter-mapping>
     <filter-name>cookieFilter</filter-name>
