--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,21 +18,36 @@
     <res-auth>Container</res-auth>
   </resource-ref>
 
-
-
   <servlet>
-    <servlet-name>Login</servlet-name>
+    <servlet-name>login</servlet-name>
     <servlet-class>com.epam.webapp.controller.LoginController</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>Login</servlet-name>
+    <servlet-name>login</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
 
-  <welcome-file-list>
+  <servlet>
+    <servlet-name>main</servlet-name>
+    <jsp-file>/WEB-INF/views/main.jsp</jsp-file>
+  </servlet>
 
-    <welcome-file>home</welcome-file>
+  <servlet-mapping>
+    <servlet-name>main</servlet-name>
+    <url-pattern>/main</url-pattern>
+  </servlet-mapping>
+
+
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/views/error.jsp</location>
+  </error-page>
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
+
+  <welcome-file-list>
 
     <welcome-file>index.jsp</welcome-file>
 
