--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 
   <servlet>
     <servlet-name>login</servlet-name>
-    <servlet-class>com.epam.webapp.controller.LoginController</servlet-class>
+    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
   </servlet>
 
   <servlet-mapping>
@@ -34,6 +34,27 @@
     <url-pattern>/main</url-pattern>
   </servlet-mapping>
 
+  <filter>
+    <filter-name>AuthFilter</filter-name>
+    <filter-class>com.epam.webapp.filter.AuthFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>AuthFilter</filter-name>
+    <url-pattern>/WEB-INF/views/*</url-pattern>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>encodingfilter</filter-name>
+    <filter-class>com.epam.webapp.filter.RoleFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>encodingfilter</filter-name>
+    <url-pattern>/main</url-pattern>
+  </filter-mapping>
 
   <error-page>
     <error-code>404</error-code>
