--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,10 @@
     <servlet-name>login</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>*.css</url-pattern>
+  </servlet-mapping>
 
   <servlet>
     <servlet-name>main</servlet-name>
@@ -58,7 +62,7 @@
 
   <error-page>
     <error-code>404</error-code>
-    <location>/WEB-INF/views/error.jsp</location>
+    <location>/WEB-INF/views/shared/error.jsp</location>
   </error-page>
   <session-config>
     <session-timeout>30</session-timeout>
