--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,22 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.18</version>
       </dependency>
-  </dependencies>
+    <!-- taglibs-standard-spec-*.jar -->
+    <!-- http://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-spec -->
+    <dependency>
+      <groupId>org.apache.taglibs</groupId>
+      <artifactId>taglibs-standard-spec</artifactId>
+      <version>1.2.5</version>
+    </dependency>
 
+    <!-- taglibs-standard-impl-*.jar -->
+    <!-- http://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+    <dependency>
+      <groupId>org.apache.taglibs</groupId>
+      <artifactId>taglibs-standard-impl</artifactId>
+      <version>1.2.5</version>
+    </dependency>
+  </dependencies>
   <build>
     <finalName>webapp</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
