--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,7 +54,7 @@
   </filter>
   <filter-mapping>
     <filter-name>AuthFilter</filter-name>
-    <url-pattern>/WEB-INF/views/*</url-pattern>
+    <url-pattern>/WEB-INF/views/main</url-pattern>
   </filter-mapping>
 
   <filter>
