--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,7 @@
     <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
   </servlet>
 
+
   <servlet-mapping>
     <servlet-name>login</servlet-name>
     <url-pattern>/login</url-pattern>
@@ -46,6 +47,26 @@
   <servlet-mapping>
     <servlet-name>diet</servlet-name>
     <url-pattern>/diet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>subscripion</servlet-name>
+    <jsp-file>/WEB-INF/views/subscripion.jsp</jsp-file>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>subscripion</servlet-name>
+    <url-pattern>/subscripion</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>logout</servlet-name>
+    <jsp-file>/WEB-INF/views/login.jsp</jsp-file>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>logout</servlet-name>
+    <url-pattern>/logout</url-pattern>
   </servlet-mapping>
 
   <filter>
