--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,36 @@
     <url-pattern>/logout</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>reviews</servlet-name>
+    <jsp-file>/WEB-INF/views/reviews.jsp</jsp-file>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>reviews</servlet-name>
+    <url-pattern>/reviews</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>clients</servlet-name>
+    <jsp-file>/WEB-INF/views/clients.jsp</jsp-file>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>clients</servlet-name>
+    <url-pattern>/clients</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>clientItem</servlet-name>
+    <jsp-file>/WEB-INF/views/clientItem.jsp</jsp-file>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>clientItem</servlet-name>
+    <url-pattern>/clientItem</url-pattern>
+  </servlet-mapping>
+
   <filter>
     <filter-name>AuthFilter</filter-name>
     <filter-class>com.epam.webapp.filter.AuthFilter</filter-class>
