--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,18 @@
       <artifactId>taglibs-standard-impl</artifactId>
       <version>1.2.5</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>webapp</finalName>
