--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,6 @@
     <servlet-name>login</servlet-name>
     <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>login</servlet-name>
     <url-pattern>/login</url-pattern>
@@ -29,30 +28,21 @@
   </servlet-mapping>
 
   <servlet>
-    <servlet-name>main</servlet-name>
-    <jsp-file>/WEB-INF/views/main.jsp</jsp-file>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>main</servlet-name>
-    <url-pattern>/main</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
     <servlet-name>training-program</servlet-name>
     <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    <jsp-file>/WEB-INF/views/program.jsp</jsp-file>
   </servlet>
   <servlet-mapping>
-    <servlet-name>training-program</servlet-name>
-    <url-pattern>/training-program</url-pattern>
-  </servlet-mapping>
+  <servlet-name>training-program</servlet-name>
+  <url-pattern>/training-program</url-pattern>
+</servlet-mapping>
+
 
 
   <servlet>
     <servlet-name>diet</servlet-name>
     <jsp-file>/WEB-INF/views/diet.jsp</jsp-file>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>diet</servlet-name>
     <url-pattern>/diet</url-pattern>
@@ -62,7 +52,6 @@
     <servlet-name>subscripion</servlet-name>
     <jsp-file>/WEB-INF/views/subscripion.jsp</jsp-file>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>subscripion</servlet-name>
     <url-pattern>/subscripion</url-pattern>
@@ -70,9 +59,8 @@
 
   <servlet>
     <servlet-name>logout</servlet-name>
-    <jsp-file>/WEB-INF/views/login.jsp</jsp-file>
+    <jsp-file>/WEB-INF/views/common/login.jsp</jsp-file>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>logout</servlet-name>
     <url-pattern>/logout</url-pattern>
@@ -82,7 +70,6 @@
     <servlet-name>reviews</servlet-name>
     <jsp-file>/WEB-INF/views/reviews.jsp</jsp-file>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>reviews</servlet-name>
     <url-pattern>/reviews</url-pattern>
@@ -92,7 +79,6 @@
     <servlet-name>clients</servlet-name>
     <jsp-file>/WEB-INF/views/clients.jsp</jsp-file>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>clients</servlet-name>
     <url-pattern>/clients</url-pattern>
@@ -102,7 +88,6 @@
     <servlet-name>clientItem</servlet-name>
     <jsp-file>/WEB-INF/views/clientItem.jsp</jsp-file>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>clientItem</servlet-name>
     <url-pattern>/clientItem</url-pattern>
@@ -139,8 +124,6 @@
   </session-config>
 
   <welcome-file-list>
-
     <welcome-file>index.jsp</welcome-file>
-
   </welcome-file-list>
 </web-app>
