--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,13 +28,13 @@
   </servlet-mapping>
 
   <servlet>
-    <servlet-name>training-program</servlet-name>
+    <servlet-name>training-trainingProgram</servlet-name>
     <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
-    <jsp-file>/WEB-INF/views/program.jsp</jsp-file>
+    <jsp-file>/WEB-INF/views/trainingProgram.jsp</jsp-file>
   </servlet>
   <servlet-mapping>
-  <servlet-name>training-program</servlet-name>
-  <url-pattern>/training-program</url-pattern>
+  <servlet-name>training-trainingProgram</servlet-name>
+  <url-pattern>/training-trainingProgram</url-pattern>
 </servlet-mapping>
 
 
