--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,15 @@
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>exercises</servlet-name>
+    <jsp-file>/WEB-INF/views/exercises.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>exercises</servlet-name>
+    <url-pattern>/exercises</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>subscriptions</servlet-name>
     <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
   </servlet>
