--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,7 @@
 
   <servlet>
     <servlet-name>reviews</servlet-name>
-    <jsp-file>/WEB-INF/views/reviews.jsp</jsp-file>
+    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>reviews</servlet-name>
