--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,7 +40,7 @@
 
   <servlet>
     <servlet-name>diet</servlet-name>
-    <jsp-file>/WEB-INF/views/diet.jsp</jsp-file>
+    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>diet</servlet-name>
