--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
 
   <servlet>
     <servlet-name>exercises</servlet-name>
-    <jsp-file>/WEB-INF/views/exercises.jsp</jsp-file>
+    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>exercises</servlet-name>
