--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -121,7 +121,7 @@
 
   <filter>
     <filter-name>encodingfilter</filter-name>
-    <filter-class>com.epam.webapp.filter.RoleFilter</filter-class>
+    <filter-class>com.epam.webapp.filter.EncodingFilter</filter-class>
     <init-param>
       <param-name>encoding</param-name>
       <param-value>UTF-8</param-value>
@@ -129,7 +129,7 @@
   </filter>
   <filter-mapping>
     <filter-name>encodingfilter</filter-name>
-    <url-pattern>/main</url-pattern>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
 
   <error-page>
