--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,152 +4,147 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
                        http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="WebApp_ID" version="3.0">
-  <display-name>Fitness</display-name>
+    <display-name>Fitness</display-name>
 
-  <description>MySQL</description>
-  <resource-ref>
-    <description>DB Connection</description>
-    <res-ref-name>jdbc/fitness</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
+    <description>MySQL</description>
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/fitness</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 
-  <servlet>
-    <servlet-name>login</servlet-name>
-    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>login</servlet-name>
-    <url-pattern>/login</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>login</servlet-name>
-    <url-pattern>*.css</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>*.css</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>training-program</servlet-name>
-    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  <servlet-name>training-program</servlet-name>
-  <url-pattern>/training-program</url-pattern>
-</servlet-mapping>
+    <servlet>
+        <servlet-name>training-program</servlet-name>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>training-program</servlet-name>
+        <url-pattern>/training-program</url-pattern>
+    </servlet-mapping>
 
 
+    <servlet>
+        <servlet-name>diet</servlet-name>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>diet</servlet-name>
+        <url-pattern>/diet</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>diet</servlet-name>
-    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>diet</servlet-name>
-    <url-pattern>/diet</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>main</servlet-name>
+        <jsp-file>/WEB-INF/views/main.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>main</servlet-name>
+        <url-pattern>/main</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>main</servlet-name>
-    <jsp-file>/WEB-INF/views/main.jsp</jsp-file>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>main</servlet-name>
-    <url-pattern>/main</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>exercises</servlet-name>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>exercises</servlet-name>
+        <url-pattern>/exercises</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>exercises</servlet-name>
-    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>exercises</servlet-name>
-    <url-pattern>/exercises</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>subscriptions</servlet-name>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>subscriptions</servlet-name>
+        <url-pattern>/subscriptions</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>subscriptions</servlet-name>
-    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>subscriptions</servlet-name>
-    <url-pattern>/subscriptions</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>logout</servlet-name>
+        <jsp-file>/WEB-INF/views/common/login.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>logout</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>logout</servlet-name>
-    <jsp-file>/WEB-INF/views/common/login.jsp</jsp-file>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>logout</servlet-name>
-    <url-pattern>/logout</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>clients</servlet-name>
+        <jsp-file>/WEB-INF/views/clients.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>clients</servlet-name>
+        <url-pattern>/clients</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>clients</servlet-name>
-    <jsp-file>/WEB-INF/views/clients.jsp</jsp-file>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>clients</servlet-name>
-    <url-pattern>/clients</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>reviews</servlet-name>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>reviews</servlet-name>
+        <url-pattern>/reviews</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>reviews</servlet-name>
-    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>reviews</servlet-name>
-    <url-pattern>/reviews</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>clientItem</servlet-name>
+        <jsp-file>/WEB-INF/views/clientItem.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>clientItem</servlet-name>
+        <url-pattern>/clientItem</url-pattern>
+    </servlet-mapping>
 
-  <!--<servlet>
-    <servlet-name>interns</servlet-name>
-    <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>interns</servlet-name>
-    <url-pattern>/clients</url-pattern>
-  </servlet-mapping>-->
+    <filter>
+        <filter-name>AuthFilter</filter-name>
+        <filter-class>com.epam.webapp.filter.SessionFilter</filter-class>
+        <init-param>
+            <param-name>avoid-urls</param-name>
+            <param-value>index.jsp</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthFilter</filter-name>
+        <url-pattern>/*</url-pattern>
 
-  <servlet>
-    <servlet-name>clientItem</servlet-name>
-    <jsp-file>/WEB-INF/views/clientItem.jsp</jsp-file>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>clientItem</servlet-name>
-    <url-pattern>/clientItem</url-pattern>
-  </servlet-mapping>
+    </filter-mapping>
 
-  <filter>
-    <filter-name>AuthFilter</filter-name>
-    <filter-class>com.epam.webapp.filter.AuthFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>AuthFilter</filter-name>
-    <url-pattern>/WEB-INF/views/main</url-pattern>
-  </filter-mapping>
+    <filter>
+        <filter-name>encodingfilter</filter-name>
+        <filter-class>com.epam.webapp.filter.EncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encodingfilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-  <filter>
-    <filter-name>encodingfilter</filter-name>
-    <filter-class>com.epam.webapp.filter.EncodingFilter</filter-class>
-    <init-param>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>encodingfilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/views/shared/error.jsp</location>
+    </error-page>
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
 
-  <error-page>
-    <error-code>404</error-code>
-    <location>/WEB-INF/views/shared/error.jsp</location>
-  </error-page>
-  <session-config>
-    <session-timeout>30</session-timeout>
-  </session-config>
-
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
