--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -84,12 +84,29 @@
 
     <servlet>
         <servlet-name>clients</servlet-name>
-        <jsp-file>/WEB-INF/views/clients.jsp</jsp-file>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>clients</servlet-name>
         <url-pattern>/clients</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>interns</servlet-name>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>interns</servlet-name>
+        <url-pattern>/interns</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>internCard</servlet-name>
+        <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>internCard</servlet-name>
+        <url-pattern>/interCard</url-pattern>
+    </servlet-mapping>
+
 
     <servlet>
         <servlet-name>reviews</servlet-name>
