--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,12 +28,12 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>training-program</servlet-name>
+        <servlet-name>program</servlet-name>
         <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>training-program</servlet-name>
-        <url-pattern>/training-program</url-pattern>
+        <servlet-name>program</servlet-name>
+        <url-pattern>/program</url-pattern>
     </servlet-mapping>
 
 
