--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -140,6 +140,15 @@
     </filter-mapping>
 
     <filter>
+        <filter-name>LocaleFilter</filter-name>
+        <filter-class>com.epam.webapp.filter.LocaleFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LocaleFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
         <filter-name>encodingfilter</filter-name>
         <filter-class>com.epam.webapp.filter.EncodingFilter</filter-class>
         <init-param>
