--- a/pom.xml
+++ b/pom.xml
@@ -42,22 +42,21 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.18</version>
       </dependency>
-    <!-- taglibs-standard-spec-*.jar -->
-    <!-- http://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-spec -->
     <dependency>
       <groupId>org.apache.taglibs</groupId>
       <artifactId>taglibs-standard-spec</artifactId>
       <version>1.2.5</version>
     </dependency>
-
-    <!-- taglibs-standard-impl-*.jar -->
-    <!-- http://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+    <dependency>
+      <groupId>com.google.collections</groupId>
+      <artifactId>google-collections</artifactId>
+      <version>1.0-rc2</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.taglibs</groupId>
       <artifactId>taglibs-standard-impl</artifactId>
       <version>1.2.5</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/com.google/gson -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
@@ -68,7 +67,6 @@
       <artifactId>json-simple</artifactId>
       <version>1.1</version>
     </dependency>
-
   </dependencies>
   <build>
     <finalName>webapp</finalName>
@@ -87,7 +85,6 @@
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
