--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,14 @@
       <artifactId>json-simple</artifactId>
       <version>1.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.0</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>webapp</finalName>
