--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -130,16 +130,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+
     <filter>
-        <filter-name>encodingfilter</filter-name>
+        <filter-name>EncodingFilter</filter-name>
         <filter-class>com.epam.webapp.filter.EncodingFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
+            <param-value>your_encoding</param-value>
         </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>encodingfilter</filter-name>
+        <filter-name>EncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
