--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,11 @@
         <res-auth>Container</res-auth>
     </resource-ref>
 
+    <context-param>
+        <param-name>javax.servlet.jsp.jstl.fmt.request.charset</param-name>
+        <param-value>UTF-8</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>login</servlet-name>
         <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
@@ -21,10 +26,6 @@
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>login</servlet-name>
-        <url-pattern>*.css</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -102,11 +103,13 @@
     <servlet>
         <servlet-name>reviews</servlet-name>
         <servlet-class>com.epam.webapp.controller.Controller</servlet-class>
+
     </servlet>
     <servlet-mapping>
         <servlet-name>reviews</servlet-name>
         <url-pattern>/reviews</url-pattern>
     </servlet-mapping>
+
 
     <filter>
         <filter-name>RoleFilter</filter-name>
