--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,11 @@
             <artifactId>log4j-api</artifactId>
             <version>2.8.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>webapp</finalName>
